--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   google_fonts: ^6.1.0
   get: ^4.6.6
   flutter_svg: ^2.0.7
+  sqflite: ^2.3.0
+  feather_icons: ^1.2.0
+  dotted_border: ^2.1.0
+  image_picker: ^1.0.4
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  equatable: ^2.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
